--- a/index.css
+++ b/index.css
@@ -1,19 +1,22 @@
+*{
+    
+}
 .containerG {
-    height: auto;
-    width: auto;
+    height: 1000px;
+    width: 1000px;
     padding: 1em;
     display: grid;
     margin: 1em;
   
-    grid-template-areas: "two one ";
+    grid-template-areas: "two one three four";
 
     gap: 1em;
-   
-    background-color: rgba(250, 250, 243, 0.867);
 }
 .oneG {
     grid-area: one;
    background: rgb(14,168,196);
+   width: 100%;
+height: 60%;
     
 
 }
@@ -21,10 +24,41 @@
     grid-area: two;
     background: rgb(14,168,196);
 background: linear-gradient(90deg, rgb(148, 239, 255) 0%, rgb(226, 189, 249) 59%);
-width: auto;
+width: 100%;
+height: 60%;
+
+}
+.threeG{
+    grid-area: three;
+    background: rgb(14,168,196);
+background: linear-gradient(90deg, rgb(148, 239, 255) 0%, rgb(226, 189, 249) 59%);
+width: 100%;
+height: 60%;
+
+}
+.fourG{
+    grid-area: four;
+    background: rgb(14,168,196);
+background: linear-gradient(90deg, rgb(148, 239, 255) 0%, rgb(226, 189, 249) 59%);
+width: 100%;
+height: 60%;
 
 }
 .img{
-    margin-left: 80px;
+    margin-left: 0px;
     margin-top: 50px;
+}
+.text{
+    text-align: center  ;
+}
+.home{
+    
+    border: 1px;
+    background-color: aqua;
+    margin-left: 20px;
+    padding: 1em;
+    width: 10%;
+    height: 10%;
+    text-align: center;
+    font-size: 20px;
 }
