--- a/home.css
+++ b/home.css
@@ -18,7 +18,7 @@ body{
 
 .states{
     margin-left: 140%;
-    margin-top: 40px;
+    margin-top: 50px;
     text-align: center;
     font-size: 30px;
     
@@ -26,7 +26,7 @@ body{
 .login{
     
     margin-left: 60%;
-    margin-top: 40px;
+    margin-top: 50px;
     text-align: center;
     font-size: 30px;
 }
@@ -40,4 +40,8 @@ body{
 .image{
     margin-left: 30%;
     margin-top: 0%;
+}
+.recommended{
+   font-size: 25px;
+   margin-left: 10%;
 }
