--- a/home.css
+++ b/home.css
@@ -25,7 +25,7 @@ body{
 }
 .login{
     
-    margin-left: 60%;
+    margin-right: 60%;
     margin-top: 50px;
     text-align: center;
     font-size: 30px;
@@ -42,6 +42,6 @@ body{
     margin-top: 0%;
 }
 .recommended{
-   font-size: 25px;
-   margin-left: 10%;
+   font-size: 30px;
+   margin-left: 60%;
 }
