--- a/states.css
+++ b/states.css
@@ -1,26 +1,23 @@
-body{
+body {
     background: linear-gradient(90deg, rgb(148, 239, 255) 0%, rgb(226, 189, 249) 59%);
 }
-.container{
+
+.container {
     display: grid;
-    grid-template-rows: 1fr
-    1fr
-    1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     gap: 1em;
     margin-top: 100px;
     margin-left: 40%;
-    
-    
+
+
 }
-.one{
+
+.one {
     border: 1px solid black;
     width: 300px;
     height: 100px;
     text-align: center;
     font-size: 20PX;
-    
-    
-        
 }
 
 .home {
@@ -34,7 +31,8 @@ body{
     text-align: center;
     font-size: 20px;
 }
-.TEXT{
+
+.TEXT {
     font-size: 70px;
     margin-left: 40%;
 }
