--- a/index.css
+++ b/index.css
@@ -44,23 +44,26 @@
 
 }
 
-.img {
-    margin-left: 0px;
-    margin-top: 0px;
-}
 
 .text {
     text-align: center;
 }
 
 .home {
-
+ width: auto;
+ height: auto;
     border: 1px;
     background-color: aqua;
-    margin-left: 20px;
-    padding: 1em;
-    width: 10%;
-    height: 10%;
-    text-align: center;
-    font-size: 20px;
+   padding: 1em;
+}
+.thankyou{
+    width: 100%;
+    height: 100%;
+       border: 1px;
+       background-color: aqua;
+      padding: 1em;
+}
+#om{
+    color: black;
+    text-decoration: none;
 }
